# program_by_demonstration

./: CMakeCache.txt  CMakeLists.txt  Inverse_Kinematics  Inverse_Kinematics.cpp  Makefile  Readme.md  Readme.txt  basic_modules  basic_modules.cpp  basic_modules.cpp~  best_circle.cpp  cluster_cube.cpp  cmake_install.cmake  create_inference_input  create_inference_input.cpp  create_input.cpp  demonstration  demonstration.cpp  demonstration_general  demonstration_general.cpp  demonstration_general_v3.cpp  demonstration_general_version2.cpp  demonstration_mod  demonstration_mod.cpp  func_inverse_kine.cpp  func_inverse_kine.h  func_multi_sol.cpp  func_multi_sol.h  gen_abs_orient.cpp  inference_final  inference_final.cpp  marker_detection  marker_detection.cpp  multiple_solutions  multiple_solutions.cpp  pcd_rgb_depth  pcd_rgb_depth.cpp  pick_a_object.cpp  robot_final_instruct  robot_final_instruct.cpp  (+7 more)
Inside_WAM/: CMakeLists.txt  cal_joint_pos.txt
Inside_WAM/include/: ServerSocket.h  ServerSocket.h~
Inside_WAM/main/: FinalShow.cpp  ex12.cpp  ex13.cpp  grasp_move_hand.cpp  hand_control_complete.cpp  hand_test.cpp  move_hand.cpp  move_hand2.cpp  move_hand3.cpp  nilex01.cpp  oh_captain_my_captain.cpp  tact.cpp  tactile_server.cpp  testMain.cpp
Openrave_example/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  animation2.py  cmake_install.cmake  ik.cpp  myLog.csv
data/: cal_cp.txt  cal_cp.txt~  camera_centers.txt  camera_cordinates (copy).txt  camera_cordinates.txt  camera_cordinates2.txt  demo1_info.txt  demo_info.txt  demonstration.txt  demonstration.txt~  end_effector.txt  end_effector_cartesian.txt  end_effector_cartesian.txt~  end_effector_cartesian2.txt  id12.txt  id24.txt  id24.txt~  id36.txt  id44.txt  id44.txt~  initial_condition.txt  initial_condition.txt~  input_cordinates_for_trans.txt  joint_positions.txt  jp8BZlC4  jpIYJMV6  jpKTjfcM  jpRSL77p  jpS0TSCE  jphBToKl  jphPrWe6  jpmbKGfe  jpoXIwCi  jpyOjTY5  phi_search.txt  position_intention.txt  robot_cordinates1.txt  robot_instruct.txt  robot_instruct.txt~  translation_matrix.txt
data/temp_data/: jp0HeVfg  jp0KKHFv  jp0Lbiol  jp0NDiiN  jp0mPZLq  jp0oKuXn  jp1Ei0B5  jp1Kuu9P  jp1m9UrJ  jp21xkWT  jp2PXGQE  jp2iCUMY  jp2v87ir  jp2xYtu6  jp3FkHZO  jp3ID6UY  jp4heSq2  jp4xOn0D  jp5BkZIC  jp5HEGyV  jp5OfXec  jp5cd59c  jp5dMNOA  jp5t6OdM  jp6NuPWl  jp6SneFX  jp6Xf9Wb  jp6hSkB6  jp6xrmNz  jp73irBD  jp7DCdK4  jp7UdU5f  jp7W6yTY  jp7Ww1zO  jp7wUKKC  jp7zvMKW  jp8795K0  jp8ByuSc  jp8CIm8Y  jp8g58sX  (+247 more)
main/: Inverse_Kinematics.cpp  best_circle.cpp  circlefit3d.cpp  cluster_cube.cpp  create_input.cpp  gen_abs_orient.cpp  multiple_solutions.cpp  test_data_write_mod.cpp
removed/: demonstration.cpp  demonstration_general.cpp  demonstration_mod.cpp
